<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/wallpaper">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">
        <TextView
            android:text="@string/texto1"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/texto1"
            android:textSize="25sp"/>

        <TextView
            android:text="@string/texto2"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:id="@+id/texto2"
            android:textAlignment="center"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/linearLayout"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boton1"
                android:backgroundTint="@color/cyan_600"
                android:id="@+id/boton1"
                android:textSize="17dp"
                android:layout_above="@+id/boton2" />
            <Button
                android:layout_width="wrap_content"
                android:backgroundTint="@color/cyan_600"
                android:layout_height="wrap_content"
                android:text="@string/boton2"
                android:id="@+id/boton2"
                android:textSize="17dp"
                android:layout_above="@+id/boton3" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cyan_600"
                android:text="@string/boton3"
                android:textSize="17dp"
                android:id="@+id/boton3"
                android:layout_above="@+id/boton4" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cyan_600"
                android:text="@string/boton4"
                android:textSize="17dp"
                android:id="@+id/boton4"
                android:layout_above="@+id/boton5"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cyan_600"
                android:text="@string/boton5"
                android:textSize="17dp"
                android:id="@+id/boton5"
                android:layout_above="@+id/boton6" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cyan_600"
                android:text="@string/boton6"
                android:textSize="17dp"
                android:id="@+id/boton6"
                android:layout_above="@+id/boton7"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cyan_600"
                android:text="@string/boton7"
                android:textSize="17dp"
                android:id="@+id/boton7"
                android:layout_alignParentBottom="true" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>