<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="zesters.fenal.buscaISBN"
    android:background="@color/cyan_800">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout5">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_titulo_busca_isbn"
        android:id="@+id/text_titulo_busca_isbn"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_hint"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_busca_isbn"
        android:hint="@string/text_isbn"
        android:layout_below="@+id/text_titulo_busca_isbn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/datos_libro"
        android:textSize="18sp"
        android:textColor="@color/cyan_50"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edit_busca_isbn"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/boton_buscar"
        android:layout_weight="0.90"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_buscar"
        android:id="@+id/boton_buscar"
        android:textSize="30dp"
        android:backgroundTint="@color/cyan_600"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"/>
    </LinearLayout>


</RelativeLayout>
